--- a/WID/CanvasPage.xaml
+++ b/WID/CanvasPage.xaml
@@ -5,6 +5,7 @@
     xmlns:local="using:WID"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:muxc="using:Microsoft.UI.Xaml.Controls"
     mc:Ignorable="d">
     
     <Page.Background>
@@ -36,35 +37,50 @@
                 />
         </Grid>
 
-        <Button
+        <StackPanel
             Grid.Row="0"
-            Click="PageBack"
+            Height="Auto"
+            Width="Auto"
+            Orientation="Horizontal"
+            Spacing="10"
             >
-            <FontIcon FontFamily="Segoe MDL2 Assets" Glyph="&#xE112;"  />
-        </Button>
+            <Button
+                Click="PageBack"
+                >
+                <FontIcon FontFamily="Segoe MDL2 Assets" Glyph="&#xE112;"  />
+            </Button>
+            <Button
+                Click="SaveFileWithDialog"
+                >
+                <FontIcon FontFamily="Segoe MDL2 Assets" Glyph="&#xE105;" />
+            </Button>
+        </StackPanel>
+
+
+        <ScrollViewer
+            Grid.Row="1"
+            ZoomMode="Enabled"
+            MinZoomFactor="0.1"
+            MaxZoomFactor="10"
+            HorizontalScrollBarVisibility="Hidden"
+            VerticalScrollBarVisibility="Hidden"
+            >
+            <Grid
+                Background="White"
+                >
+                <InkCanvas
+                    x:Name="inkMain"
+                    />
+            </Grid>
+        </ScrollViewer>
 
         
-        <Grid
-            Background="White"
-            Grid.Row="1"
-            >
-            <InkCanvas
-                x:Name="inkMain"
-                />
-        </Grid>
-        
         <TextBlock x:Name="txtTest" Text="Hello" Grid.Row="2" />
-        
+
         <InkToolbar 
             Grid.Row="3"
             TargetInkCanvas="{x:Bind inkMain}"
             >
-            <InkToolbarCustomToolButton
-                x:Name="btnSave"
-                Click="SaveFile"
-                >
-                <FontIcon FontFamily="Segoe MDL2 Assets" Glyph="&#xE105;" />
-            </InkToolbarCustomToolButton>
         </InkToolbar>
     </Grid>
 </Page>
