Added undo and redo Stack
TODO: use undo and redo stack to implement undo and redo functionality

--- a/WID/CanvasPage.xaml
+++ b/WID/CanvasPage.xaml
@@ -52,6 +52,9 @@
             <Button
                 Click="SaveFileWithDialog"
                 >
+                <Button.KeyboardAccelerators>
+                    <KeyboardAccelerator Key="S" Modifiers="Control" />
+                </Button.KeyboardAccelerators>
                 <FontIcon FontFamily="Segoe MDL2 Assets" Glyph="&#xE105;" />
             </Button>
         </StackPanel>
