--- a/WID/CanvasPage.xaml
+++ b/WID/CanvasPage.xaml
@@ -144,8 +144,26 @@
             Grid.Row="3"
             ActiveToolChanged="InkToolChanged"
             InkDrawingAttributesChanged="InkToolChanged"
-            Loaded="InkToolbarLoaded"
+            InitialControls="PensOnly"
             >
+            <InkToolbarEraserButton
+                Checked="EraserChecked"
+                Unchecked="EraserUnchecked"
+                >
+                <FontIcon FontFamily="Segoe Fluent Icons" Glyph="&#xE75C;" />
+            </InkToolbarEraserButton>
+            <InkToolbarCustomToggleButton
+                Checked="RulerChecked"
+                Unchecked="RulerUnchecked"
+                >
+                <FontIcon FontFamily="Segoe Fluent Icons" Glyph="&#xED5E;" />
+            </InkToolbarCustomToggleButton>
+            <InkToolbarCustomToggleButton
+                Checked="ProtractorChecked"
+                Unchecked="ProtractorUnchecked"
+                >
+                <FontIcon FontFamily="Segoe Fluent Icons" Glyph="&#xF0B4;" />
+            </InkToolbarCustomToggleButton>
         </InkToolbar>
     </Grid>
 </Page>
