--- a/WID/NotebookPage.xaml
+++ b/WID/NotebookPage.xaml
@@ -7,8 +7,9 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
     Background="White"
-    Height="2880"
-    Width="1920"
+    Height="Auto"
+    Width="Auto"
+    x:Name="grid"
     >
     <InkCanvas
         x:Name="inkCanvas"
