perf(note): Improved reordering methods
Also checked that maxID works properly for notebooks

--- a/WID/NotebookPage.xaml
+++ b/WID/NotebookPage.xaml
@@ -9,7 +9,7 @@
     Background="White"
     Height="Auto"
     Width="Auto"
-    x:Name="grid"
+    Canvas.ZIndex="-1"
     >
     <InkCanvas
         x:Name="inkCanvas"
