--- a/WID/PageThumbnail.xaml
+++ b/WID/PageThumbnail.xaml
@@ -7,7 +7,41 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
     >
-    
-    
+    <Grid.RowDefinitions>
+        <RowDefinition Height="*" />
+        <RowDefinition Height="Auto" />
+    </Grid.RowDefinitions>
+
+    <Button
+        Grid.Row="1"
+        >
+        <Button.Content>
+            <FontIcon FontFamily="Segoe Fluent Icons" Glyph="&#xE74D;" />
+        </Button.Content>
+        <Button.Flyout>
+            <Flyout>
+                <StackPanel
+                    Orientation="Vertical"
+                    Spacing="10"
+                    >
+                    <TextBlock
+                        Style="{StaticResource BaseTextBlockStyle}"
+                        >
+                        Are you sure you want to delete the page?
+                    </TextBlock>
+                    <TextBlock
+                        Style="{StaticResource BaseTextBlockStyle}"
+                        >
+                        This action cannot be undone.
+                    </TextBlock>
+                    <Button
+                        Click="DeleteNote"
+                        >
+                        Yes, delete.
+                    </Button>
+                </StackPanel>
+            </Flyout>
+        </Button.Flyout>
+    </Button>
 
 </Grid>
