feat(note): Begin implementation of deleting pages

--- a/WID/CanvasPage.xaml
+++ b/WID/CanvasPage.xaml
@@ -173,6 +173,7 @@
                 </Grid>
             </SplitView.Pane>
             <ScrollViewer
+                x:Name="svPageZoom"
                 ZoomMode="Enabled"
                 MinZoomFactor="0.1"
                 MaxZoomFactor="10"
