feat(note): Camera can be opened for importing files

--- a/WID/CanvasPage.xaml
+++ b/WID/CanvasPage.xaml
@@ -160,6 +160,7 @@
                                 </StackPanel>
                             </Button>
                             <Button
+                                Click="OpenCameraForFileImport"
                                 HorizontalAlignment="Stretch"
                                 >
                                 <StackPanel
