--- a/WID/CanvasPage.xaml
+++ b/WID/CanvasPage.xaml
@@ -148,6 +148,7 @@
                                 </StackPanel>
                             </Button>
                             <Button
+                                Click="ImportFromFile"
                                 HorizontalAlignment="Stretch"
                                 HorizontalContentAlignment="Left"
                                 >
@@ -188,6 +189,11 @@
             </ToggleButton>
         </StackPanel>
 
+        <muxc:TeachingTip
+            x:Name="ttInfoPopup"
+            IsOpen="False"
+            PreferredPlacement="RightTop"
+            />
 
         <SplitView
             Grid.Row="1"
