feat(note): Added ability to import PDF files.

--- a/WID/CanvasPage.xaml
+++ b/WID/CanvasPage.xaml
@@ -76,7 +76,7 @@
                         >
                         <MenuFlyoutItem
                             Text="Save File"
-                            Click="SaveFileWithDialog"
+                            Click="SaveFile"
                             >
                             <MenuFlyoutItem.KeyboardAccelerators>
                                 <KeyboardAccelerator Key="S" Modifiers="Control" />
